--- a/CoffeeFinder/templates/CoffeeFinderApp/index.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/index.html
@@ -3,5 +3,10 @@
 	<title>Coffee Finder</title>
 </head>
 <body>
-	<a href="/CoffeeFinderApp/map/">Find Nearest CoffeeShops</a>
+	<a href="/CoffeeFinderApp/map/">Find Nearest CoffeeShops</a> <br><br>
+
+	<a href="/CoffeeFinderApp/coffee_item_list/">List Items</a>
+
+</body>
+
 </html>
