adding documentation to story related to coffee_items , kareem tarek

--- a/CoffeeFinder/templates/CoffeeFinderApp/coffee_item_list.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/coffee_item_list.html
@@ -18,5 +18,8 @@
             <strong>There are no coffee_items present.</strong>
        {% endif %}
 
+        <a href="/CoffeeFinderApp/create_coffee_item/">Add new item </a>
+
+
     </body>
 </html>
