--- a/CoffeeFinder/templates/CoffeeFinderApp/index.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/index.html
@@ -5,7 +5,7 @@
 <body>
 	<a href="/CoffeeFinderApp/map/">Find Nearest CoffeeShops</a> <br><br>
 
-	<a href="/CoffeeFinderApp/coffee_item_list/">List Items</a>
+	<a href="/CoffeeFinderApp/page_list/">List page_list</a>
 
 </body>
 
