--- a/CoffeeFinder/templates/CoffeeFinderApp/coffee_item_page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/coffee_item_page.html
@@ -1,4 +1,5 @@
 <h4> Name : {{ coffee_item.name }} <br><br> </h4>
 <h4>  Price: {{ coffee_item.price }} </h4> 
 
+ <!-- detailed view for each Coffee item -->
  <!-- Kareem Tarek 28-1181-->
