--- a/CoffeeFinder/templates/CoffeeFinderApp/page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page.html
@@ -18,3 +18,6 @@
         {% endif %}
     </body>
 </html>
+
+       <!-- If ' page_name 'exists  , we loop on coffee item table to fetch all coffee item objects related to this page -->
+       <!-- Kareem Tarek 28-1181 -->
