--- a/CoffeeFinder/templates/CoffeeFinderApp/page_list.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page_list.html
@@ -9,3 +9,5 @@
        {% else %}
             <strong>There are no Coffee Shops present.</strong>
        {% endif %}
+
+       <!-- for loop , loops through ' Page' table in our database to list all Coffee Shop pages  -->
