mostafa, rana, & aly. a coffeeshop owner can search and select the coffee shop's location from a map which generates a detailed address

--- a/CoffeeFinder/templates/CoffeeFinderApp/index.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/index.html
@@ -4,4 +4,6 @@
 </head>
 <body>
 	<a href="/CoffeeFinderApp/map/">Find Nearest CoffeeShops</a>
+	<br>
+	<a href="/CoffeeFinderApp/shopSubscribe"> Enter Location Of  My Coffee Shop</a>
 </html>
