--- a/CoffeeFinder/templates/CoffeeFinderApp/page_list.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page_list.html
@@ -11,3 +11,4 @@
        {% endif %}
 
        <!-- for loop , loops through ' Page' table in our database to list all Coffee Shop pages  -->
+       <!-- Kareem Tarek 28-1181 -->
