--- a/CoffeeFinder/templates/CoffeeFinderApp/page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% load staticfiles %} 
+
 <html>
    
     <body>
@@ -7,7 +9,8 @@
             {% if coffee_items %}
             <ul>
                 {% for coffee_item in coffee_items %}
-                <li><a href="/CoffeeFinderApp/coffee_item_page/{{ coffee_item.id }}">{{ coffee_item.name}}</a></li>
+                <li><h5><a href="/CoffeeFinderApp/coffee_item_page/{{ coffee_item.id }}">{{ coffee_item.name}}</a></h5></li>
+                <img src="{% static coffee_item.url %}" alt="No picture of item" />
                 {% endfor %}
             </ul>
             {% else %}
@@ -20,4 +23,4 @@
 </html>
 
        <!-- If ' page_name 'exists  , we loop on coffee item table to fetch all coffee item objects related to this page -->
-       <!-- Kareem Tarek 28-1181 -->
+       <!-- img src="{% static coffee_item.url %}" alt="Picture of Item " enables display of picture for certain item   -->
