--- a/CoffeeFinder/templates/CoffeeFinderApp/index.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/index.html
@@ -5,7 +5,10 @@
 <body>
 	<a href="/CoffeeFinderApp/map/">Find Nearest CoffeeShops</a> <br><br>
 
-	<a href="/CoffeeFinderApp/page_list/">List page_list</a><br><br>
+	<a href="/CoffeeFinderApp/page_list/">List Coffee Shops </a><br><br><br><br><br><br>
+
+    <a href="/CoffeeFinderApp/create_page/">Create your own page </a><br><br>
+
 
 
 
