--- a/CoffeeFinder/templates/CoffeeFinderApp/map.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/map.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
+{% load staticfiles %}
 <html>
   <head>
     <title>Coffee Finder</title>
@@ -13,50 +14,72 @@
       }
     </style>
     <!-- Include google maps Javascript file to the page -->
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&v=3&libraries=geometry"></script>
     <script>
-var map;
-var infowindow;
-
-function success(position) {
-
-  var lat = position.coords.latitude; // Obtain user's current latitude
-  var long = position.coords.longitude; // Obtain user's current longitude
-  // Create a new google maps LatLng object containing both the longitude and latitude
-  var coords = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);  
-
-  map = new google.maps.Map(document.getElementById('map-canvas'), { // Create a new map object
-    center: coords, // Center of map equals user's location/coordinates
-    zoom: 15 // Zoom level of map
-  });
-
-   var marker=new google.maps.Marker({ // Create a marker to identify user's location
-   position:coords, // Position of marker equals user's coordinates
-   });
-
- marker.setMap(map); // Place marker on the map
- 
-  var infowindow = new google.maps.InfoWindow({ // Info window on marker saying it belongs to the user
-    content:"You Are Here"
-  });
-
-  infowindow.open(map,marker); // Opening the info window above the marker on the map
-
-  google.maps.event.addListener(marker,'click',function() { // Implementing an action listener upon clicking the marker
-  map.setZoom(18); // Zoom in when the marker is clicked
-  map.setCenter(marker.getPosition());
-  });
-}
-
-
-
-if (navigator.geolocation) { // Checks if Browser supports HTML5 GeoLocation API
-  navigator.geolocation.getCurrentPosition(success);
-} else {
-  error('Geo Location is not supported');
-}
-
-    </script>
+      
+        var map;
+        var bounds = new google.maps.LatLngBounds();
+        
+        function success(position) {
+          
+          var infowindow;
+          var lat = position.coords.latitude; // Obtain user's current latitude
+          var long = position.coords.longitude; // Obtain user's current longitude
+          // Create a new google maps LatLng object containing both the longitude and latitude
+          var coords = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);  
+          map = new google.maps.Map(document.getElementById('map-canvas'), { // Create a new map object
+            center: coords, // Center of map equals user's location/coordinates
+            zoom: 15 // Zoom level of map
+          });
+          var marker=new google.maps.Marker({ // Create a marker to identify user's location
+           position:coords, // Position of marker equals user's coordinates
+          });
+          marker.setMap(map); // Place marker on the map
+          var infowindow = new google.maps.InfoWindow({ // Info window on marker saying it belongs to the user
+            content:"You Are Here"
+          });
+          infowindow.open(map,marker); // Opening the info window above the marker on the map
+          google.maps.event.addListener(marker,'click',function() { // Implementing an action listener upon clicking the marker
+          map.setZoom(18); // Zoom in when the marker is clicked
+          map.setCenter(marker.getPosition());
+            });
+          var dest;
+          var distance;
+  
+           {% for coffeeshop in coffeeshops %}
+              dest = new google.maps.LatLng({{ coffeeshop.latitude}}, {{ coffeeshop.longitude }});
+               distance = google.maps.geometry.spherical.computeDistanceBetween(dest, coords);
+              if (distance < 1555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555) {  
+                marker{{ coffeeshop.pk }} = buildMarker(map, 
+                  {{ coffeeshop.latitude}}, 
+                  {{ coffeeshop.longitude }}, 
+                  "{{ coffeeshop.name }}");
+                infowindow{{ coffeeshop.pk }} = new google.maps.InfoWindow({ // Info window on marker saying it belongs to the user 
+                content:"{{ coffeeshop.name }}" }); 
+                infowindow{{ coffeeshop.pk }}.open(map,marker{{ coffeeshop.pk }});
+              }  
+           {% endfor %}
+           map.fitBounds(bounds);
+          }
+          function buildMarker(map, latitude, longitude, name) {
+            var latlng = new google.maps.LatLng(latitude, longitude);
+            
+              var marker = new google.maps.Marker({
+              position: latlng,
+              map: map,
+              title:name,
+              });
+              bounds.extend(latlng);
+        
+            return marker
+          }
+          if (navigator.geolocation) { // Checks if Browser supports HTML5 GeoLocation API
+           navigator.geolocation.getCurrentPosition(success);
+          } else {
+            error('Geo Location is not supported');
+          }
+          </script>
   </head>
   <body>
     <div id="map-canvas"></div>
