--- a/CoffeeFinder/templates/CoffeeFinderApp/index.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/index.html
@@ -3,24 +3,17 @@
 	<title>Coffee Finder</title>
 </head>
 <body>
-<<<<<<< HEAD
 
 
 	<a href="/CoffeeFinderApp/map/">Find Nearest CoffeeShops</a>
 	<br>
-	<a href="/CoffeeFinderApp/shopSubscribe"> Enter Location Of My Coffee Shop</a>
+	<a href="/CoffeeFinderApp/shopSubscribe"> Create My CoffeeShop</a>
 	<br>
 	<a href="/CoffeeFinderApp/page_list/">List page_list</a>
 	<br>
 
     
-=======
-	<a href="/CoffeeFinderApp/map/">Find Nearest CoffeeShops</a> <br><br>
 
-	<a href="/CoffeeFinderApp/page_list/">List Coffee Shops </a><br><br><br><br><br><br>
-
-    <a href="/CoffeeFinderApp/create_page/">Create your own page </a><br><br>
->>>>>>> master
 
 
 
@@ -28,8 +21,5 @@
 
 </body>
 
-<<<<<<< HEAD
 
-=======
->>>>>>> master
 </html>
