--- a/CoffeeFinder/templates/CoffeeFinderApp/index.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/index.html
@@ -3,11 +3,23 @@
 	<title>Coffee Finder</title>
 </head>
 <body>
+{% if user.is_authenticated %}
+<h3> You are logged in </h3>
+{% endif %}
 	<a href="/CoffeeFinderApp/map/">Find Nearest CoffeeShops</a> <br><br>
 
 	<a href="/CoffeeFinderApp/page_list/">List Coffee Shops </a><br><br><br><br><br><br>
 
     <a href="/CoffeeFinderApp/create_page/">Create your own page </a><br><br>
+
+  {% if user.is_authenticated %}
+<a href="/CoffeeFinderApp/logout/">Logout</a><br />
+{% else %}
+<a href="/CoffeeFinderApp/register/">Register Here</a><br />
+<a href="/CoffeeFinderApp/login/">Login</a><br />
+{% endif %}
+
+
 
 
 
