--- a/CoffeeFinder/templates/CoffeeFinderApp/index.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/index.html
@@ -12,6 +12,15 @@
 	<a href="/CoffeeFinderApp/page_list/">List page_list</a>
 	<br>
 
+	{% if user.is_authenticated %}
+<a href="/CoffeeFinderApp/logout/">Logout</a><br />
+{% else %}
+<a href="/CoffeeFinderApp/register/">Register Here</a><br />
+<a href="/CoffeeFinderApp/login/">Login</a><br />
+{% endif %}
+
+
+
     
 
 
