issue#16,the coffeeshop owner can add delivery option

--- a/CoffeeFinder/templates/CoffeeFinderApp/shopSubscribe.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/shopSubscribe.html
@@ -208,6 +208,8 @@ function initialize() {
         <br>
         Country: <input id="country" size="20" type="text" name="country"  >
         <br>
+        Delivery: <input type="checkbox" name='delivery'>
+        <br> 
         <input id="long" size="20" type="text" name="longitude"  hidden> <br>
         <input id="lat" size="20" type="text" name="latitude" hidden >
         <input size = "20" type="submit" value="create page">  
