--- a/CoffeeFinder/templates/CoffeeFinderApp/coffee_item_page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/coffee_item_page.html
@@ -31,14 +31,13 @@
 	 		<h2>
 	 			{{username}}! Your opinion matters
 	 			<br><textarea rows="6" cols="70" size="200" name="field" form="reviewForm" onkeyup="countChar(this)">Enter your review here... (400 Characters or less)</textarea>
-	 			<div id="charNum"></div>
+	 			<h3><div id="charNum"></div></h3>
 		       <form action ="/CoffeeFinderApp/post_item_review/" method="post" id="reviewForm">{% csrf_token%}
 		        <br>
 		        <input size="20" type="text" name="user" value={{user_id}} hidden>
         		<input size="20" type="text" name="coffee_item" value={{coffee_item.id}} hidden >
         		<input size = "20" type="submit" value="submit review">
 		        </form>
-		        <br>
 	      	</h2>
 	 	</div>
 	 	
