--- a/CoffeeFinder/templates/CoffeeFinderApp/coffee_item_page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/coffee_item_page.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html>
 	<head>
 		<script src="http://code.jquery.com/jquery-1.5.js"></script>
 		<!-- Character counting function for the review -->
-    <script>
-      function countChar(val) {
-        var len = val.value.length;
-        if (len >= 400) {
-          val.value = val.value.substring(0, 400);
-        } else {
-          $('#charNum').text(400 - len);
-        }
-      };
-    </script>
+		<script src="{% static "js/CharCount.js" %}"></script> <!-- Loading JavaScript -->
 	</head>
 	{% load staticfiles %} 
 	<body>
