--- a/CoffeeFinder/templates/CoffeeFinderApp/page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page.html
@@ -19,6 +19,31 @@
         {% else %}
             The specified page {{ page_name }} does not exist!
         {% endif %}
+
+        {% if images %}
+            <ul>
+            {% for image in images %}
+                <li><a href="{{ image.image.url }}">{{ image.image }}</a></li>
+                <img src="{{ image.image.url }}" alt="{{ image.image.name }}">
+            {% endfor %}
+            </ul>
+        {% else %}
+            <p>No images.</p>
+        {% endif %}
+
+        <!-- Upload form. Note enctype attribute! -->
+        <form action="{% url "uploadImage" %}" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <p>{{ form.non_field_errors }}</p>
+            <p>{{ form.image.label_tag }} {{ form.image.help_text }}</p>
+            <p>
+                {{ form.image.errors }}
+                {{ form.image }}
+            </p>
+            <input hidden id="image" size="20" type="text" name="image" value={{ form.image }} 
+            <input hidden id="lat" size="20" type="text" name="page" value={{ page.id }}  >
+            <p><input type="submit" value="Upload" /></p>
+        </form>
     </body>
 </html>
 
