--- a/CoffeeFinder/templates/CoffeeFinderApp/shopSubscribe.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/shopSubscribe.html
@@ -194,6 +194,7 @@ function initialize() {
 
      
         <!-- form for getting coffeshop registeration info-->
+       <!-- checkbox added to the form for the delivery option -->
        <h2>
        <form action ="/CoffeeFinderApp/create_page/" method="post">{% csrf_token%}
         CoffeeShop Owner:<input size="20" type="text"  name='owner'  >
