Iss #27 redirecting to page after uploading image

--- a/CoffeeFinder/templates/CoffeeFinderApp/page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page.html
@@ -28,7 +28,7 @@
             {% endfor %}
             </ul>
         {% else %}
-            <p>No images.</p>
+            <h3>No images.</h3>
         {% endif %}
 
         <!-- Upload form. Note enctype attribute! -->
