--- a/CoffeeFinder/templates/CoffeeFinderApp/index.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/index.html
@@ -14,6 +14,7 @@
 
 	{% if user.is_authenticated %}
 <a href="/CoffeeFinderApp/logout/">Logout</a><br />
+<a href="/CoffeeFinderApp/view_orders/">View Orders</a><br>
 {% else %}
 <a href="/CoffeeFinderApp/register/">Register Here</a><br />
 <a href="/CoffeeFinderApp/login/">Login</a><br />
