--- a/CoffeeFinder/templates/CoffeeFinderApp/page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page.html
@@ -5,6 +5,34 @@
    
     <body>
         <h3>Welcome to {{ page_name }}</h3>
+        <!-- Yasser -->
+        {% ifequal page.owner current_user.username %}
+            <h4>Orders: </h4>
+            {% if orders %}
+                    <table style="width:60%">
+                      <tr>
+                        <td>Name</td>
+                        <td>Quantity</td>
+                        <td>Price</td>
+                        <td>User</td>
+                        <td>Location</td>
+                      </tr>
+                    {% for order in orders %}
+                      <tr>
+                        <td>{{ order.coffeeshop_item.name}}</td>
+                        <td>{{ order.quantity}}</td>
+                        <td>{{ order.coffeeshop_item.price}}</td>
+                        <td>{{ order.user}}</td>
+                        <td>{{ order.longitude}} , {{ order.latitude}}</td>
+                      </tr>
+                    {% endfor %}
+                    </table>
+            {% else %}
+                <strong>There are currently no orders.</strong>
+            {% endif %}
+        {% endifequal %}
+        <!-- Yasser -->
+        <h4>Items: </h4>
         {% if page %}
             {% if coffee_items %}
             <ul>
