issues #23 #22 a coffeeshop owner can now upload/delete photos related to his coffee . documentation done

--- a/CoffeeFinder/templates/CoffeeFinderApp/item_edit.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/item_edit.html
@@ -24,14 +24,12 @@
           <br>
 
 
-      <input type="submit" name="submit" value="Edit Info " />
+      <input type="submit" name="submit" value="Edit" />
         </form> 
 
          <br>
          <br>
          <a href="/CoffeeFinderApp/page/{{page_slug}}"> Back to {{page_name}} </a>
-         <a href="/CoffeeFinderApp/upload_photo"> Upload </a>
-
 
 
 
