--- a/CoffeeFinder/templates/CoffeeFinderApp/coffee_item_page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/coffee_item_page.html
@@ -1,16 +1,54 @@
 {% load staticfiles %} 
-
+<a href="/CoffeeFinderApp/page/{{ page.slug }}"> Back to {{ page.name}} </a><br>
+<br><br>
 <h4> Name : {{ coffee_item.name }}</h4>
 <h4>  Price: {{ coffee_item.price }}</h4> 
-<h4>  Description: {{ coffee_item.description }} <br><br>
+<h4>  Description: {{ coffee_item.description }} <br>
 </h4> 
 
-<h4>  <img src="{% static coffee_item.url %}" alt="No picture of item" /> </h4>
+
+  {% if images %}
+ <ul>
+  {% for image in images %}
+ 
+  <li><a href="{{ image.image.url }}">{{ image.image }}</a></li>
+
+  <img src="{{ image.image.url }}" width="120" height="120" alt="{{ image.image.name }}">
+ 
+  {% endfor %}
+
+  {% endif %}
+
+  
+<br><br>
 <br><br>
 
- <a href="/CoffeeFinderApp/delete/{{ coffee_item.id }}"> Delete item </a><br><br>
 
-<a href="/CoffeeFinderApp/item_edit/"> Edit info  </a>
+
+<a href="/CoffeeFinderApp/item_edit/"> Edit </a><br><br>
+
+<a href="/CoffeeFinderApp/upload_to_item/"> Upload photo</a><br><br>
+
+<a href="/CoffeeFinderApp/delete_photos/{{ coffee_item.id }}"> Delete associated photos </a><br><br>
+
+
+<a href="/CoffeeFinderApp/delete/{{ coffee_item.id }}"> Delete </a><br><br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
  <!-- detailed view for each Coffee item plus an image for each . 
