Hiding upload button from website guests in page.html #27

--- a/CoffeeFinder/templates/CoffeeFinderApp/page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page.html
@@ -33,21 +33,23 @@
         {% endif %}
         {% if noImage %}
             PLEASE CHOOSE A PHOTO
-        {% endif %}
+        {% endif %} 
+        {% if user.is_authenticated %}
         <!-- Upload form. Note enctype attribute! -->
-        <form action="{% url "uploadImage" %}" method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            <p>{{ form.non_field_errors }}</p>
-            <p>{{ form.image.label_tag }} {{ form.image.help_text }}</p>
-            <p>
-                {{ form.image.errors }}
-                {{ form.image }}
-            </p>
-            <input hidden id="image" size="20" type="text" name="image" value={{ form.image }} 
-            <input hidden id="page" size="20" type="text" name="page" value={{ page.id }}  >
-            <input hidden id="user" size="20" type="text" name="user" value={{ user_id }}  >
-            <p><input type="submit" value="Upload" /></p>
-        </form>
+            <form action="{% url "uploadImage" %}" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <p>{{ form.non_field_errors }}</p>
+                <p>{{ form.image.label_tag }} {{ form.image.help_text }}</p>
+                <p>
+                    {{ form.image.errors }}
+                    {{ form.image }}
+                </p>
+                <input hidden id="image" size="20" type="text" name="image" value={{ form.image }} 
+                <input hidden id="page" size="20" type="text" name="page" value={{ page.id }}  >
+                <input hidden id="user" size="20" type="text" name="user" value={{ user_id }}  >
+                <p><input type="submit" value="Upload" /></p>
+            </form>
+        {% endif %}
     </body>
 </html>
 
