Fixed issue with migrations and database

--- a/CoffeeFinder/templates/CoffeeFinderApp/shopSubscribe.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/shopSubscribe.html
@@ -200,6 +200,8 @@ function initialize() {
         <br>
         CoffeeShop Name:<input size="20" type="text"  name="name"  >
         <br>
+        Delivery:<input size="20" type="checkbox"  name="delivery"  >
+        <br>
         Street No:<input id="street" size="20" type="text"  name="street_number"  >
         <br>
         Area: <input id="area" size="20" type="text" name="area" >
