S26 link of coffeeshop on marker's infowindow

--- a/CoffeeFinder/templates/CoffeeFinderApp/map.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/map.html
@@ -55,8 +55,13 @@
                   {{ coffeeshop.latitude}}, 
                   {{ coffeeshop.longitude }}, 
                   "{{ coffeeshop.name }}");// calls build marker to create a marker at given locations
+                //create a hyperlink for infowindows of markers
+                var alink = document.createElement("a");
+                alink.href = "/CoffeeFinderApp/page/{{coffeeshop.slug}}";
+                alink.text = "{{coffeeshop.name}}";
+                document.getElementsByTagName("body")[0].appendChild(alink)
                 infowindow{{ coffeeshop.pk }} = new google.maps.InfoWindow({ 
-                content:"{{ coffeeshop.name }}" }); // creates an info window object
+                content:alink }); // creates an info window object that has name of the coffeeshop as a hyperlink text that takes you to the page view
                 infowindow{{ coffeeshop.pk }}.open(map,marker{{ coffeeshop.pk }});// adds an info window above marker
               }  
            {% endfor %}
