--- a/CoffeeFinder/templates/CoffeeFinderApp/index.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/index.html
@@ -14,11 +14,12 @@
 	
 
 	{% if user.is_authenticated %}
-<a href="/CoffeeFinderApp/logout/">Logout</a><br />
-{% else %}
-<a href="/CoffeeFinderApp/register/">Register Here</a><br />
-<a href="/CoffeeFinderApp/login/">Login</a><br />
-{% endif %}
+		<a href="/CoffeeFinderApp/logout/">Logout</a><br />
+	{% else %}
+		<a href="/CoffeeFinderApp/register/">Register Here</a><br />
+		<a href="/CoffeeFinderApp/login/">Login</a><br />
+	{% endif %}
+	<a href="/CoffeeFinderApp/VIEW_ORDER/">View My Orders</a><br />
 
 
 
@@ -29,7 +30,7 @@
 
 
 
-</body>
+	</body>
 
 
 </html>
