--- a/CoffeeFinder/templates/CoffeeFinderApp/login.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/login.html
@@ -49,7 +49,8 @@
           </div>
         </div>
       </header>
-            <div id="home" style="background-image: url(assets/images/pizza-slider.jpg); width: 100%; height: 862px;" class="parallax hidden-xs">
+
+            <div id="home" style="background-image: url(http://i62.tinypic.com/2gx2r6w.jpg); width: 100%; height: 862px;" class="parallax hidden-xs">
                 <section class="pizza-guy-wrapper">
         <div class="container">
           <div class="row">
