--- a/CoffeeFinder/templates/CoffeeFinderApp/shopSubscribe.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/shopSubscribe.html
@@ -194,9 +194,8 @@ function initialize() {
         </div>
       </header>
 
-          <section class="style-2"style="background-image: url('http://i62.tinypic.com/2gx2r6w.jpg')";  width: 100%; height: 862px;class="parallax hidden-xs" >
-
-        <div class="container" >
+          <section class="style-2" style="background-image: url('http://i59.tinypic.com/280mx05.jpg')">
+        <div class="container">
           <div class="row">
             <div class="col-md-12">
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="126px" height="112px" viewBox="0 0 126 112" enable-background="new 0 0 126 112" xml:space="preserve" class="mini-logo">
