--- a/CoffeeFinder/templates/CoffeeFinderApp/shopSubscribe.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/shopSubscribe.html
@@ -194,7 +194,7 @@ function initialize() {
         </div>
       </header>
 
-          <section class="style-2" style="background-image: url('http://i59.tinypic.com/280mx05.jpg')">
+          <section class="style-2" style="background-image: url('http://i59.tinypic.com/280mx05.jpg'); border:0;">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
