--- a/CoffeeFinder/templates/CoffeeFinderApp/page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page.html
@@ -2,6 +2,259 @@
 {% load staticfiles %} 
 
 <html>
+    <head>
+        <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <title>CoffeeFinder</title>
+        <link rel="shortcut icon" href="assets/images/favicon.png">
+        <!-- Including stylesheets-->
+        <link rel="stylesheet" href="{% static 'css/core.css' %}">
+        <link rel="stylesheet" href="{% static 'css/theme.css' %}">
+        <link rel="stylesheet" href="{% static 'css/font-awesome.css' %}">
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&amp;subset=latin,latin-ext">
+        <link rel="stylesheet" href="{% static 'css/layerslider.css' %}">
+        <link rel="stylesheet" href="{% static 'css/prettyPhoto.css' %}">
+        <link rel="stylesheet" href="{% static 'css/colorpicker.css' %}">
+            <style>
+          html, body, #map {
+            height: 500px;
+            margin: 100px 0px 0px 0px;
+            padding: 0px 5px 0px 5px;
+          }
+        </style>
+
+       
+      <script type="text/javascript"
+        src="https://maps.googleapis.com/maps/api/js?libraries=geometry,places">
+      </script>
+    </head>
+    <body>
+        <body class="menu-style-2 responsive sticky-menu">
+        <div class="site-wrapper">
+         <div class="order-menu-wrapper">
+        <button class="close-order fa fa-cutlery"></button>
+        <div class="order-menu">
+          <button class="mobile-close">×</button>
+          <div class="order-header">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="126px" height="112px" viewBox="0 0 126 112" enable-background="new 0 0 126 112" xml:space="preserve" class="mini-logo">
+              <g>
+                <g>
+                  <g>
+                    <path d="M63.016,1.134C55.414,6.166,53.994,17.37,53,29c5.021,1.321,9.101,3.579,10.016,8.998 C63.93,32.579,68.01,30.321,73.031,29C72.037,17.37,70.617,6.166,63.016,1.134z"></path>
+                  </g>
+                </g>
+              </g>
+              <g>
+                <g>
+                  <g>
+                    <path d="M63.125,49.996C61.076,24.065,20.794,22.264,1,34c0,0.667,0.167,0.25,0.167,0.917C7.297,55.219,27.661,71.48,55.109,64 c-6.523,7.979,3.71,30.104-5.01,40c3.785,3.008,10.959,1.13,13.026-2.999c2.068,4.129,9.242,6.007,13.027,2.999 c-8.721-9.896,1.512-32.021-5.011-40c27.448,7.48,47.813-8.781,53.942-29.083c0-0.667,0.167-0.25,0.167-0.917 C105.457,22.264,65.175,24.065,63.125,49.996z"></path>
+                  </g>
+                </g>
+              </g>
+              <g>
+                <g>
+                  <g>
+                    <path d="M50,70c-25.705-1.039-29.236,20.098-34,40C31.967,101.301,53.156,97.822,50,70z"></path>
+                  </g>
+                </g>
+              </g>
+              <g>
+                <g>
+                  <g>
+                    <path d="M76.297,70c25.705-1.039,29.236,20.098,34,40C94.33,101.301,73.141,97.822,76.297,70z"></path>
+                  </g>
+                </g>
+              </g>
+            </svg>
+            <input type="text" id="order-search" placeholder="search the menu">
+           </div>
+          <section>
+            <h2 class="color text-center">Menu</h2>
+            <article id="order" class="food-item price-right">
+            {% if page %}
+                {% if coffee_items %}
+                        {% for coffee_item in coffee_items %}
+                        <header>
+                           <h3><a href="/CoffeeFinderApp/coffee_item_page/{{ coffee_item.id }}">{{ coffee_item.name}}</a></h3>
+                           <h4 class="price"><span>$</span>{{ coffee_item.price }}</h4>
+                            <div class="quantity">
+                              <button class="minus">-</button><span class="num">0</span>
+                              <button class="plus">+</button>
+                            </div> 
+                        </header>
+                        <p> {{ coffee_item.description }} </p>
+                        {% endfor %}
+                {% else %}
+                    <strong>No items are currently in page.</strong>
+
+                {% endif %}
+            {% else %}
+                The specified page {{ page_name }} does not exist!
+            {% endif %}
+            </article>
+          </section>
+        </div>
+      </div>
+
+      <section class="style-2" >
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="126px" height="112px" viewBox="0 0 126 112" enable-background="new 0 0 126 112" xml:space="preserve" class="mini-logo">
+                <g>
+                  <g>
+                    <g>
+                      <path d="M63.016,1.134C55.414,6.166,53.994,17.37,53,29c5.021,1.321,9.101,3.579,10.016,8.998 C63.93,32.579,68.01,30.321,73.031,29C72.037,17.37,70.617,6.166,63.016,1.134z"></path>
+                    </g>
+                  </g>
+                </g>
+                <g>
+                  <g>
+                    <g>
+                      <path d="M63.125,49.996C61.076,24.065,20.794,22.264,1,34c0,0.667,0.167,0.25,0.167,0.917C7.297,55.219,27.661,71.48,55.109,64 c-6.523,7.979,3.71,30.104-5.01,40c3.785,3.008,10.959,1.13,13.026-2.999c2.068,4.129,9.242,6.007,13.027,2.999 c-8.721-9.896,1.512-32.021-5.011-40c27.448,7.48,47.813-8.781,53.942-29.083c0-0.667,0.167-0.25,0.167-0.917 C105.457,22.264,65.175,24.065,63.125,49.996z"></path>
+                    </g>
+                  </g>
+                </g>
+                <g>
+                  <g>
+                    <g>
+                      <path d="M50,70c-25.705-1.039-29.236,20.098-34,40C31.967,101.301,53.156,97.822,50,70z"></path>
+                    </g>
+                  </g>
+                </g>
+                <g>
+                  <g>
+                    <g>
+                      <path d="M76.297,70c25.705-1.039,29.236,20.098,34,40C94.33,101.301,73.141,97.822,76.297,70z"></path>
+                    </g>
+                  </g>
+                </g>
+              </svg>
+
+                <div id="home" class="parallax hidden-xs">
+                <div data-ls="slidedelay: 4000; transition2d: 5,5;" class="ls-slide">
+                    <h1 style="top: 47%; left: 50%;" class="ls-l text-center">Welcome to <span class="color"></a> {{ page_name }} </span></h1>
+                    <h4 class="style-2">What makes us special</h4>
+                </div>
+            </div>
+          </div>
+      </section>
+    </div>
+    </div>
+      <section>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="126px" height="112px" viewBox="0 0 126 112" enable-background="new 0 0 126 112" xml:space="preserve" class="mini-logo">
+                <g>
+                  <g>
+                    <g>
+                      <path d="M63.016,1.134C55.414,6.166,53.994,17.37,53,29c5.021,1.321,9.101,3.579,10.016,8.998 C63.93,32.579,68.01,30.321,73.031,29C72.037,17.37,70.617,6.166,63.016,1.134z"></path>
+                    </g>
+                  </g>
+                </g>
+                <g>
+                  <g>
+                    <g>
+                      <path d="M63.125,49.996C61.076,24.065,20.794,22.264,1,34c0,0.667,0.167,0.25,0.167,0.917C7.297,55.219,27.661,71.48,55.109,64 c-6.523,7.979,3.71,30.104-5.01,40c3.785,3.008,10.959,1.13,13.026-2.999c2.068,4.129,9.242,6.007,13.027,2.999 c-8.721-9.896,1.512-32.021-5.011-40c27.448,7.48,47.813-8.781,53.942-29.083c0-0.667,0.167-0.25,0.167-0.917 C105.457,22.264,65.175,24.065,63.125,49.996z"></path>
+                    </g>
+                  </g>
+                </g>
+                <g>
+                  <g>
+                    <g>
+                      <path d="M50,70c-25.705-1.039-29.236,20.098-34,40C31.967,101.301,53.156,97.822,50,70z"></path>
+                    </g>
+                  </g>
+                </g>
+                <g>
+                  <g>
+                    <g>
+                      <path d="M76.297,70c25.705-1.039,29.236,20.098,34,40C94.33,101.301,73.141,97.822,76.297,70z"></path>
+                    </g>
+                  </g>
+                </g>
+              </svg>
+              <h2 id="pizzas" class="section-heading text-center">{{ page_name }}'s menu</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="tab-content col-md-7">
+              <div id="tab-0" class="tab-pane active">
+                <div class="food-item price-right">
+                    {% if page %}
+                        {% if coffee_items %}
+                            {% for coffee_item in coffee_items %}
+                            <h3><a href="/CoffeeFinderApp/coffee_item_page/{{ coffee_item.id }}">{{ coffee_item.name}}</a></h3>
+                            <p>{{ coffee_item.description }}</p>
+                            <h4 class="price"><span>$</span>{{ coffee_item.price }}</h4>
+                                <div class="col-md-6">
+                                    {% for coffee_image in coffee_images %}
+                                        {% if coffee_image.item_id == coffee_item.id %}
+                                            <img src="{{ coffee_image.image.url }}" width="80" height="80" alt="{{ coffee_image.image.name }}">
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
+                            {% endfor %}
+                        {% else %}
+                            <strong>No items are currently in page.</strong>
+                        {% endif %}
+                    {% else %}
+                        The specified page {{ page_name }} does not exist!
+                    {% endif %}
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    <header class="site-header">
+        <div class="container">
+          <div class="row">
+            <!-- Site Logo: change the width to fit your logo size-->
+            <div class="site-logo retina pull-left"><ul class="site-navigation"><li class="active"><a href="/CoffeeFinderApp/"> CoffeeFinder</a></li></ul></div>
+            <!-- Site Navigation-->
+            <nav role="navigation" class="navbar pull-right">
+              <!-- Site Navigation Header: this part is required and is used on mobile.-->
+              <div class="navbar-header">
+                <button type="button" data-toggle="collapse" data-target=".site-navigation" class="navbar-toggle"><span class="sr-only">Toggle navigation</span><span class="fa fa-bars"></span></button>
+              </div>
+              <!-- Site Navigation: main menu content-->
+              <ul class="site-navigation">
+                <li class="active"><a href="/CoffeeFinderApp/page_list/">Find A CoffeeShop</a>
+                </li>
+                <li><a href="/CoffeeFinderApp/shopSubscribe" data-toggle="dropdown" class="dropdown-toggle">Create Your CoffeeShop</a>
+                </li>
+                <li>
+                <a href="/CoffeeFinderApp/description_edit/"> Edit Page's Info</a>
+                </li>
+                {% if user.is_authenticated %}
+                <li><a href="/CoffeeFinderApp/logout/">Logout</a></li>
+                {% else %}
+                <li><a href="/CoffeeFinderApp/login/">Sign In</a></li>
+                <li><a href="/CoffeeFinderApp/register/">Register</a></li>
+                {% endif %}
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </header>
+
+          
+                      <footer class="site-footer">
+        <div class="copyright">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-6"></div>
+              <div class="col-sm-6">
+                <div class="social"><a href="#" class="fa fa-twitter"></a><a href="#" class="fa fa-facebook"></a><a href="#" class="fa fa-behance"></a><a href="#" class="fa fa-skype"></a><a href="#" class="fa fa-vimeo-square"></a><a href="#" class="fa fa-google-plus"></a><a href="#" class="fa fa-linkedin-square"></a>
+                </div>
+              </div>
+            </div>
+          </div>
+      </footer>
+  </body>
 
     <body>
         <h3>Welcome to {{ page_name }}</h3>
@@ -36,7 +289,6 @@
             {% endif %}
         {% endifequal %}
         <!-- Yasser -->
-        <h4>Items: </h4>
         {% if page.delivery %}
         <a href="/CoffeeFinderApp/{{ page_name_slug}}/makeOrder">Make an Order</a>
         {% endif %}
@@ -45,22 +297,7 @@
         <a href="/CoffeeFinderApp/{{ page_name_slug}}/editStatus">Edit Status on an Order</a>
         {% endifequal %}
 
-        {% if page %}
-            {% if coffee_items %}
-            <ul>
-                {% for coffee_item in coffee_items %}
-                <li><h5><a href="/CoffeeFinderApp/coffee_item_page/{{ coffee_item.id }}">{{ coffee_item.name}}</a></h5></li>
-                {% endfor %}
-            </ul>
-            {% else %}
-                </br>
-                <strong>No items are currently in page.</strong>
-
-            {% endif %}
-        {% else %}
-            The specified page {{ page_name }} does not exist!
-        {% endif %}
-         <br><br>
+        
 
 
          <h4> What makes us special ? 
@@ -104,6 +341,53 @@
                 <p><input type="submit" value="Upload" /></p>
             </form>
         {% endif %}
+
+        <script src="{% static 'javascript/jquery.js' %}"></script>
+        <script src="{% static 'javascript/gmap3.js' %}"></script>
+        <script src="{% static 'javascript/jquery.cookie.js' %}"></script>
+        <script src="{% static 'javascript/theme.js' %}"></script>
+        <script src="{% static 'javascript/smoothscroll.js' %}"></script>
+        <script src="{% static 'javascript/bootstrap/tab.js' %}"></script>
+        <script src="{% static 'javascript/bootstrap/collapse.js' %}"></script>
+        <script src="{% static 'javascript/bootstrap/alert.js' %}"></script>
+        <script src="{% static 'javascript/bootstrap/carousel.js' %}"></script>
+        <script src="{% static 'javascript/bootstrap/transition.js' %}"></script>
+        <script src="{% static 'javascript/jquery.touchSwipe.js' %}"></script>
+        <script src="{% static 'javascript/picturefill.js' %}" async></script>
+        <script src="{% static 'javascript/parallax.js' %}"></script>
+        <script src="{% static 'javascript/imagesloaded.js' %}"></script>
+        <script src="{% static 'javascript/isotope.js' %}"></script>
+        <script src="{% static 'javascript/jflickrfeed.js' %}"></script>
+        <script src="{% static 'javascript/jquery.prettyPhoto.js' %}"></script>
+        <!-- LayerSlider-->
+        <script src="{% static 'javascript/greensock.js' %}"></script>
+        <script src="{% static 'javascript/layerslider.transitions.js' %}"></script>
+        <script src="{% static 'javascript/layerslider.kreaturamedia.jquery.js' %}"></script>
+        <!-- Colorpicker-->
+        <script src="{% static 'javascript/colorpicker.js' %}"></script>
+        <script>
+        jQuery(function($) {
+         map('#map', '2 Elizabeth St, Melbourne', 14);
+         
+         $("#no-clutter").parallax("50%", 0.6);
+         $("#home").parallax("50%", 0.6);
+         $("#coffee-statement-1").parallax("50%", 0.6);
+         $("#pizza-statement-1").parallax("50%", 0.6);
+        });
+        
+        </script>
+        <script>
+            jQuery(function() {
+             jQuery('#home').layerSlider({
+              skin        : 'kataleya',
+              skinsPath       : 'assets/css/layerslider/skins/',
+              responsiveUnder   : 1200,
+              layersContainer   : 1200,
+              responsive      : true,
+              showCircleTimer   : false
+             });
+            });
+        </script>
     </body>
 </html>
 
