--- a/CoffeeFinder/templates/CoffeeFinderApp/index.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/index.html
@@ -32,7 +32,7 @@
               </div>
               <!-- Site Navigation: main menu content-->
               <ul class="site-navigation">
-                <li class="active"><a href="/CoffeeFinderApp/page_list/">Find A CoffeeShop</a>
+                <li><a href="/CoffeeFinderApp/page_list/">Find A CoffeeShop</a>
                 </li>
                 <li><a href="/CoffeeFinderApp/shopSubscribe" data-toggle="dropdown" class="dropdown-toggle">Create Your CoffeeShop</a>
                 </li>
