Edited form box in signup and login

--- a/CoffeeFinder/templates/CoffeeFinderApp/register.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/register.html
@@ -51,11 +51,10 @@
         </div>
       </header>
             <div id="home" style="background-image: url(http://i62.tinypic.com/2gx2r6w.jpg); width: 100%; height: 862px;" class="parallax hidden-xs">
-                <section class="pizza-guy-wrapper">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-                <br><br><br><br>
+                <br><br><br><br>  <br><br><br><br>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="126px" height="112px" viewBox="0 0 126 112" enable-background="new 0 0 126 112" xml:space="preserve" class="mini-logo">
                 <g>
                   <g>
@@ -86,11 +85,11 @@
                   </g>
                 </g>
               </svg>
-              <h2 id="order" class="section-heading text-center">Sign Up</h2>
+
+              <h2 id="order" class="section-heading text-center">Register</h2>
               <br>
             </div>
           </div>
-          <div class="row pizza-guy">
             <div class="col-md-6 col-md-offset-3">
             {% if registered %}
                 <h2 id="order" class="section-heading text-center">thank you for registering!</h2>
@@ -106,8 +105,6 @@
             {% endif %}
             </div>
           </div>
-        </div>
-      </section>
       <br><br><br>
       </div>
       
