--- a/CoffeeFinder/templates/CoffeeFinderApp/page.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page.html
@@ -139,24 +139,15 @@
           </div>
         </div>
       </div>
-
-      <section class="style-2" >
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-
-
-                <div id="home" class="parallax hidden-xs">
-                <div data-ls="slidedelay: 4000; transition2d: 5,5;" class="ls-slide">
-                    <h1 style="top: 47%; left: 50%;" class="ls-l text-center">Welcome to <span class="color"></a> {{ page_name }} </span></h1>
-                    <br><br>
-                    <h4 style="top: 55%; left: 40%;" class="style-2 ls-l text-center">{{ page.description }}</h4>
+        <section class="style-2">
+                <div id="home" style="background-image: url('{% static "/static/images/background/pageList2.jpg" %}'); width: 100%; height: 95%;" class="parallax hidden-xs">
+                    <div data-ls="slidedelay: 4000; transition2d: 5,5;" class="ls-slide">
+                        <h1 style="top: 47%; left: 50%;" class="ls-l text-center">Welcome to <span class="color"></a> {{ page_name }} </span></h1>
+                        <br><br>
+                        <h4 style="top: 55%; left: 35%;" class="style-2 ls-l text-center">{{ page.description }}</h4>
+                    </div>
                 </div>
-            </div>
-          </div>
-      </section>
-    </div>
-    </div>
+        </section> 
           
       <section>
         <div class="container">
